# stone-prover

./: CMakeLists.txt  Dockerfile  README.md  prove_lambdaworks_verify_stone.sh
fibonacci_air_test_cases/: CMakeLists.txt  case_1.cc  case_1_output.txt  case_2.cc  case_2_output.txt  verify_from_bytes.cc
lambdaworks_prover/: Cargo.toml
lambdaworks_prover/src/: main.rs
