[package]
name = "lambdaworks_prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lambdaworks_prover"
path = "src/main.rs"

[features]

[dependencies]
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev="62e3c80d613e15"}
stark-platinum-prover = {git = "https://github.com/lambdaclass/lambdaworks", rev="62e3c80d613e15"}



