[package]
name = "lambdaworks_prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lambdaworks_prover"
path = "src/main.rs"

[features]

[dependencies]
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev="6645ea6"}
stark-platinum-prover = {git = "https://github.com/lambdaclass/lambdaworks", rev="6645ea6"}



